# minibots-api

./: .env.example  CLAUDE.md  Dockerfile.postgres  README.md  SCHEDULING_AGENT_PLAN.md  chat_scheduler.py  client.py  docker-compose.yml  migrate.py  pyproject.toml  seed_business_analyzer.py  seed_crazy_imagine.py  setup_scheduler.py  setup_test.py
app/: auth.py  config.py  database.py  db_pool.py  main.py  models.py  observability.py  rate_limit.py  socket.py  templates.py
app/agents/: __init__.py  base.py  business_analyzer_agent.py  examples.py  factory.py  generic_info_agent.py  intent_analyzer.py  memory.py  rag_info_agent.py  scheduling_agent.py
app/routers/: agents.py  bots.py  chat.py  chats.py  documents.py  products.py  templates.py  tenants.py  usage.py
app/schemas/: __init__.py  bot.py  chat.py
app/services/: chat_handler.py  gcal.py  gemini.py  message_queue.py  sheets.py  storage.py
app/tools/: __init__.py  calculator.py  row_lookup.py  scheduling.py  sheets_lookup.py
cli/: client.py  completer.py  main.py  menu.py  ui.py
docker/: garage.toml
llm/: __init__.py  client.py  pricing.py  tools.py  usage.py
rag/: __init__.py  store.py
tests/: test_auth.py  test_calculator.py  test_completeness_scorer.py  test_message_queue.py  test_pipeline.py  test_scheduling.py
