[project]
name = "minibots-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.10",
    "fastapi[standard]>=0.136.1",
    "google-genai>=2.0.1",
    "markitdown[pdf]>=0.1.5",
    "openai>=2.37.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "psycopg[binary,pool]>=3.1.0",
    "psycopg-pool>=3.2.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-socketio>=5.16.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "websockets>=16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
